--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,9 @@
                         <phase>verify</phase>
                     </execution>
                 </executions>
+                <configuration>
+
+                </configuration>
             </plugin>
         </plugins>
     </build>
